# Copyright 2019, by the California Institute of Technology.
# ALL RIGHTS RESERVED. United States Government Sponsorship acknowledged.
# Any commercial use must be negotiated with the Office of Technology
# Transfer at the California Institute of Technology.
#
# This software may be subject to U.S. export control laws. By accepting
# this software, the user agrees to comply with all applicable U.S. export
# laws and regulations. User has the responsibility to obtain export
# licenses, or other export authority as may be required before exporting
# such information to foreign countries or providing access to foreign
# persons.

[tool.poetry]
name = "l2ss-py"
version = "2.6.0"
description = "L2 Subsetter Service"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/l2ss-py"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.9"
netCDF4 = "^1.5"
xarray = {version = "*", extras = ["parallel"]}
geopandas ="^0.10"
Shapely = "^1.7.1"
harmony-service-lib = { version = "^1.0.20", optional = true }
pystac = { version = "^0.5.3", optional = true }
julian = "^0.14"
importlib-metadata = "^4.8.1"
h5py = "^3.6.0"
cf-xarray = "*"
numpy = "1.23.5"

[tool.poetry.dev-dependencies]
pytest = "~7"
flake8 = "^3.7"
pytest-cov = "~4"
pylint = "^2.4"
sphinx = "^4.4"
pytest-benchmark = "~4"
moto = "1.3.14"
jsonschema = "^3.2.0"
m2r2 = "^0.3.1"
sphinx-rtd-theme = "^0.5.2"

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.poetry.extras]
harmony = ["harmony-service-lib", "pystac"]

[tool.poetry.scripts]
l2ss_harmony = 'podaac.subsetter.subset_harmony:main'
l2ss-py = 'podaac.subsetter.run_subsetter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
